Update and rename tndex.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>index.html</title>
 <body>
 <h1>welcome to my project</h1>
-<p>my project is code</>
+<p>my project is code</p>
 </body>
 </boyy>
 </html>
